--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Vanilla Slider</title>
+    <title>UZBase Slider</title>
   </head>
   <body>
     <div class="slider-container">
