--- a/index.html
+++ b/index.html
@@ -9,32 +9,12 @@
   <body>
     <div class="slider-container">
       <div class="slide">
-        <img
-          src="./img/1.jpg"
-        />
+        <img src="./img/1.jpg"/>
       </div>
-      <div class="slide">
-        <img
-          src="./img/2.jpg"
-        />
-      </div>
-      <div class="slide">
-        <img
-          src="./img/3.jpg"
-        />
-      </div>
-      <div class="slide">
-        <img
-          src="./img/4.jpg"
-        />
-      </div>
-      <div class="slide">
-        <img
-          src="./img/5.jpg"
-          alt=""
-        />
-      </div>
-    </div>
+      <div class="slide"><img src="./img/2.jpg"/></div>
+      <div class="slide"><img src="./img/3.jpg"/></div>
+      <div class="slide"><img src="./img/4.jpg"/></div>
+      <div class="slide"><img src="./img/5.jpg"/></div></div>
     <script src="app.js"></script>
   </body>
 </html>
